--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,8 +1,5 @@
 .main {
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+  height: 100vh;
 }
