--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -55,3 +55,14 @@ h1 {
   width: 100%;
   font-family: inherit;
 }
+
+.underlineButton {
+  border: none;
+  border-bottom: 1px solid var(--black);
+  background: none;
+  text-align: center;
+  font-size: 24px;
+  padding-bottom: 4px;
+  font-family: inherit;
+  opacity: 0.8;
+}
