--- a/src/components/JoinGame/join.module.css
+++ b/src/components/JoinGame/join.module.css
@@ -44,3 +44,25 @@
   font-family: inherit;
   font-weight: 600;
 }
+
+.header {
+  position: absolute;
+  transform: translate(-50%, -50%);
+  left: 50%;
+  top: 48px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+  font-size: 24px;
+  font-family: inherit;
+}
+
+.middleContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 24px;
+}
