--- a/src/components/Lobby/lobby.module.css
+++ b/src/components/Lobby/lobby.module.css
@@ -74,3 +74,21 @@
 .roleRevealHeader {
   font-family: var(--font-unbounded);
 }
+
+.roleRevealSecondHeader {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 12px;
+  font-family: var(--font-unbounded);
+}
+
+.roleText {
+  font-size: 48px;
+}
+
+.roleTextAbove {
+  font-size: 24px;
+  font-weight: normal;
+}
