--- a/src/components/HomeScreen/home.module.css
+++ b/src/components/HomeScreen/home.module.css
@@ -1,10 +1,10 @@
 .container {
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
+  gap: 48px;
+
 }
 
 .upperContainer {
